<resources>
    <string name="sync_message_time">h:mm a</string>
    <string name="publication_date_long">EEE, MMM d, yyyy</string>
    <string name="publication_date_short">EEE, MMM d</string>
    <string name="download_progress_decimal_format">\@@@</string>
    <string name="app_name_short">Amazon Kindle</string>
    <string name="app_name_full">Kindle for Android</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="remove">Remove</string>
    <string name="ok">OK</string>
    <string name="go">Go</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="dismiss">Dismiss</string>
    <string name="discard">Discard</string>
    <string name="send">Send</string>
    <string name="home">Home</string>
    <string name="kindle_home">Kindle Home</string>
    <string name="archived_items">Archived Items</string>
    <string name="sync">Sync</string>
    <string name="info">Info</string>
    <string name="warning">Warning</string>
    <string name="settings">Settings</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="android_settings">@string/settings</string>
    <string name="store_unavailable_title">Problem Loading Kindle Store</string>
    <string name="store_unavailable_message">You may open the store in the browser, or cancel and try again later.</string>
    <string name="store_unavailable_open_in_browser">Open in browser</string>
    <string name="feedback_instructions">Sending your feedback can help improve Kindle for Android.</string>
    <string name="feedback_thank_you">Thank you for the feedback!</string>
    <string name="feedback_failed_title">Sending Feedback Failed</string>
    <string name="feedback_failed_message">@string/error_message_connection</string>
    <string name="sending_feedback">Sending...</string>
    <string name="lib_title">Library</string>
    <string name="lib_filter_count">(%1$d)</string>
    <string name="library_filter_all_items">All Items</string>
    <string name="library_filter_local_items">Downloaded Items</string>
    <string name="library_filter_archived_items">Archived Items</string>
    <string name="library_filter_periodical_only">Periodicals</string>
    <string name="lib_menu_home">@string/home</string>
    <string name="lib_menu_archive_items">Archived Items</string>
    <string name="lib_menu_store">Kindle Store</string>
    <string name="lib_menu_sort">Sort By</string>
    <string name="lib_menu_sort_recent">Sort: Most Recent</string>
    <string name="lib_menu_sort_title">Sort: Title</string>
    <string name="lib_menu_sort_author">Sort: Author</string>
    <string name="lib_menu_sync_check">Sync &amp; Check for Items</string>
    <string name="lib_menu_sync">@string/sync</string>
    <string name="lib_menu_search">Search</string>
    <string name="lib_menu_settings">@string/settings</string>
    <string name="lib_menu_help">Help</string>
    <string name="lib_menu_feedback">Send Feedback</string>
    <string name="lib_menu_info">@string/info</string>
    <string name="lib_menu_view">View</string>
    <string name="lib_menu_list">List</string>
    <string name="lib_menu_grid">Grid</string>
    <string name="lib_menu_delete">Remove Items</string>
    <string name="lib_context_lpr">Go to last page read</string>
    <string name="lib_context_beginning">Go to beginning</string>
    <string name="lib_context_location">Go to location...</string>
    <string name="lib_context_remove">Remove from device</string>
    <string name="lib_context_download">Download to Home</string>
    <string name="lib_context_extras">Shelfari book extras</string>
    <string name="lib_context_keep">Keep this issue</string>
    <string name="lib_context_dontkeep">"Don't keep this issue"</string>
    <string name="lib_toast_remove_book">Moved to Archived Items</string>
    <string name="lib_back_issues_row">Periodicals: Back Issues (%1$d)</string>
    <string name="lib_grid_back_issues_title">Periodicals</string>
    <string name="lib_grid_back_issues_count">Back Issues (%1$d)</string>
    <string name="cover_sample_tag">Sample</string>
    <string name="cover_keep_tag">Keep</string>
    <string name="no_title">No title</string>
    <string name="downloading_notitle">Downloading...</string>
    <string name="download_interrupted">Download interrupted</string>
    <string name="download_paused">Download paused</string>
    <string name="download_queued">Download queued</string>
    <string name="downloading_to_home_notitle">Downloading to Home...</string>
    <string name="cannot_download">"Can't download %1$s."</string>
    <string name="full_media_card">There is not enough space available on the media card.</string>
    <string name="full_device">There is not enough space available on this device.</string>
    <string name="try_again">Try Again</string>
    <string name="resume_download">Resume Download</string>
    <string name="loading_book">Loading...</string>
    <string name="sort_by_title">by Title</string>
    <string name="sort_by_author">by Author</string>
    <string name="sort_by_recent">by Most Recent</string>
    <string name="transient_opening">Opening item...</string>
    <string name="transient_paused">Paused -</string>
    <string name="transient_interrupted">Interrupted -</string>
    <string name="transient_queued">Queued -</string>
    <string name="transient_done">Done -</string>
    <string name="transient_downloading" />
    <string name="download_progress_kb">KB</string>
    <string name="download_progress_mb">MB</string>
    <string name="download_percentage">%1$d%%</string>
    <string name="download_zero_percent">0%</string>
    <string name="num_back_issues">%1$d Back Issues</string>
    <string name="single_back_issue">1 Back Issue</string>
    <string name="sortby_dialog_title">Sort By</string>
    <string name="sortby_recent_option">Most Recent</string>
    <string name="sortby_title_option">Title</string>
    <string name="sortby_author_option">Author</string>
    <string name="registering">Registering...</string>
    <string name="sign_in">Register</string>
    <string name="login_prompt">Register now to get started</string>
    <string name="email_prompt">E-mail address</string>
    <string name="password_prompt">Amazon password</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="license_agreement">By registering, you agree to the Kindle</string>
    <string name="license_agreement_link"><u>License Agreement and Terms of Use</u>.</string>
    <string name="login_jp_customer">Amazon.co.jp customer?</string>
    <string name="login_create_account">Create one now</string>
    <string name="no_account">"Don't have an Amazon.com account?"</string>
    <string name="amazon_jp_message">"Amazon.co.jp customers will need to create an Amazon.com account in order to use Kindle.

Create account now?"</string>
    <string name="reader_instructions_turn">Tap in the margins or flick to turn pages</string>
    <string name="reader_instructions_center">Tap the center of the page to view status and location information</string>
    <string name="reader_instructions_notes">Touch and hold over text to bring up a dictionary definition, add notes, highlights, and more</string>
    <string name="reader_instructions_lock">Tap the lower right corner of the screen to lock the orientation</string>
    <string name="reader_instructions_more">For more reading options, press MENU</string>
    <string name="whats_new_300">3.0</string>
    <string name="whats_new_300_0">Localized support for German speaking customers</string>
    <string name="whats_new_300_1">Tablet optimizations</string>
    <string name="whats_new_300_2">New touch optimized store for tablets</string>
    <string name="whats_new_300_3">Offline dictionary</string>
    <string name="whats_new_300_4">Download progress</string>
    <string name="whats_new_300_5">Resumable downloads</string>
    <string name="whats_new_300_6">@string/several_bug_fixes</string>
    <string name="whats_new_200">2.0</string>
    <string name="whats_new_200_0">Newspapers</string>
    <string name="whats_new_200_1">Magazines</string>
    <string name="whats_new_200_2">Image zoom</string>
    <string name="whats_new_200_3">Integrated store</string>
    <string name="whats_new_200_4">@string/several_bug_fixes</string>
    <string name="whats_new_110">1.1</string>
    <string name="whats_new_110_0">Add, edit, and delete notes and highlights</string>
    <string name="whats_new_110_1">Full text search</string>
    <string name="whats_new_110_2">Wikipedia and Dictionary.com lookup</string>
    <string name="whats_new_110_3">Orientation lock</string>
    <string name="whats_new_110_4">Shelfari book extras</string>
    <string name="whats_new_110_5">@string/several_bug_fixes</string>
    <string name="whats_new_100">1.0</string>
    <string name="whats_new_100_0">Read Kindle books</string>
    <string name="whats_new_100_1">Amazon Whispersync between Kindle devices</string>
    <string name="whats_new_100_2">Page turn animation</string>
    <string name="whats_new_100_3">Add/delete bookmarks</string>
    <string name="whats_new_100_4">Customize font size</string>
    <string name="whats_new_100_5">Night reading mode</string>
    <string name="menuitem_home">@string/home</string>
    <string name="menuitem_viewoptions">View Options</string>
    <string name="menuitem_goto">Go To</string>
    <string name="menuitem_back">Back</string>
    <string name="menuitem_search">Search</string>
    <string name="menuitem_sync">Sync</string>
    <string name="menuitem_bookmark">Bookmark</string>
    <string name="menuitem_share_progress">Share Progress</string>
    <string name="menuitem_sections">Sections</string>
    <string name="menuitem_keep">Keep This Issue</string>
    <string name="menuitem_articles">Articles</string>
    <string name="menuitem_prev_article">Previous</string>
    <string name="menuitem_next_article">Next</string>
    <string name="goto_beginning">Beginning</string>
    <string name="goto_toc">Table of Contents</string>
    <string name="goto_cover">Cover</string>
    <string name="goto_location">Location...</string>
    <string name="goto_notes">My Notes &amp; Marks...</string>
    <string name="annotation_note">Note</string>
    <string name="annotation_highlight">Highlight</string>
    <string name="annotation_delete_highlight">Delete Highlight</string>
    <string name="annotation_more_options">More...</string>
    <string name="annotation_image_zoom">Zoom</string>
    <string name="annotation_search">Search</string>
    <string name="annotation_wikipedia">Wikipedia</string>
    <string name="annotation_google">Google</string>
    <string name="dictionary_not_available_title">Download Dictionary</string>
    <string name="dictionary_not_available_message">To display definitions, download the free dictionary.</string>
    <string name="dictionary_not_available_button">Download</string>
    <string name="dictionary_corrupt_title">Dictionary error</string>
    <string name="dictionary_corrupt_message">"The dictionary can't be opened. Would you like to remove and re-download it?"</string>
    <string name="dictionary_corrupt_button">Remove and download</string>
    <string name="dictionary_downloading_title">Dictionary is downloading</string>
    <string name="dictionary_downloading_message">Definitions will appear here when the download is complete.</string>
    <string name="dictionary_download_failed_title">Dictionary download was interrupted</string>
    <string name="dictionary_download_failed_button">Resume download</string>
    <string name="definition_not_available_title">No definition found.</string>
    <string name="definition_dictionary">Full Definition</string>
</resources>