<?xml version="1.0" encoding="utf-8"?>
<com.amazon.kcp.reader.ui.SelectionButtons android:visibility="gone" style="@style/wrap"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:id="@id/annotation_note" android:background="@drawable/selection_buttons_left" android:paddingLeft="10.0dip" android:text="@string/annotation_note" style="@style/selection_buttons" />
    <Button android:id="@id/annotation_highlight" android:background="@drawable/selection_buttons_center" android:text="@string/annotation_highlight" style="@style/selection_buttons" />
    <Button android:id="@id/annotation_delete_highlight" android:background="@drawable/selection_buttons_center" android:visibility="gone" android:text="@string/annotation_delete_highlight" style="@style/selection_buttons" />
    <Button android:id="@id/annotation_more_options" android:background="@drawable/selection_buttons_right" android:paddingRight="10.0dip" android:text="@string/annotation_more_options" style="@style/selection_buttons" />
    <Button android:id="@id/annotation_search_right" android:background="@drawable/selection_buttons_right" android:paddingLeft="10.0dip" android:visibility="gone" android:text="@string/annotation_search" style="@style/selection_buttons" />
    <Button android:id="@id/annotation_image_zoom" android:background="@drawable/selection_buttons_right" android:paddingRight="10.0dip" android:text="@string/annotation_image_zoom" style="@style/selection_buttons" />
    <Button android:id="@id/annotation_search" android:background="@drawable/selection_buttons_left" android:paddingLeft="10.0dip" android:visibility="gone" android:text="@string/annotation_search" style="@style/selection_buttons" />
    <Button android:id="@id/annotation_wikipedia" android:background="@drawable/selection_buttons_center" android:visibility="gone" android:text="@string/annotation_wikipedia" style="@style/selection_buttons" />
    <Button android:id="@id/annotation_google" android:background="@drawable/selection_buttons_right" android:paddingRight="10.0dip" android:visibility="gone" android:text="@string/annotation_google" style="@style/selection_buttons" />
    <Button android:id="@id/annotation_only_image_zoom" android:background="@drawable/selection_buttons_single" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:visibility="gone" android:text="@string/annotation_image_zoom" style="@style/selection_buttons" />
    <ImageView android:id="@id/selection_buttons_marker_top" android:src="@drawable/menu_annotation_pointer_top" style="@style/wrap" />
    <ImageView android:id="@id/selection_buttons_marker_bottom" android:src="@drawable/menu_annotation_pointer_btm" style="@style/wrap" />
</com.amazon.kcp.reader.ui.SelectionButtons>
