<?xml version="1.0" encoding="utf-8"?>
<ScrollView style="@style/wrap"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TableLayout style="@style/bullets_table"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <TableRow style="@style/bullet_row">
            <ImageView style="@style/bullet_image" />
            <TextView android:text="@string/reader_instructions_turn" style="@style/bullet_text" />
        </TableRow>
        <TableRow style="@style/bullet_row">
            <ImageView style="@style/bullet_image" />
            <TextView android:text="@string/reader_instructions_center" style="@style/bullet_text" />
        </TableRow>
        <TableRow style="@style/bullet_row">
            <ImageView style="@style/bullet_image" />
            <TextView android:text="@string/reader_instructions_notes" style="@style/bullet_text" />
        </TableRow>
        <TableRow style="@style/bullet_row">
            <ImageView style="@style/bullet_image" />
            <TextView android:text="@string/reader_instructions_lock" style="@style/bullet_text" />
        </TableRow>
        <TableRow style="@style/bullet_row">
            <ImageView style="@style/bullet_image" />
            <TextView android:text="@string/reader_instructions_more" style="@style/bullet_text" />
        </TableRow>
    </TableLayout>
</ScrollView>
