<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="4.0dip" android:text="@string/feedback_instructions" />
    <EditText android:gravity="top" android:id="@id/feedback_text" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="4.0dip" android:layout_weight="1.0" />
    <LinearLayout android:orientation="horizontal" android:background="#ff7f7f7f" android:padding="0.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="0.0dip">
        <Button android:enabled="false" android:id="@id/feedback_send" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="4.0dip" android:text="@string/send" android:layout_weight="1.0" android:onClick="onSendClicked" />
        <Button android:id="@id/feedback_cancel" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="4.0dip" android:text="@string/discard" android:layout_weight="1.0" android:onClick="onCancelClicked" />
    </LinearLayout>
</LinearLayout>
